pbrprod1/prod/sso-oauth-authority/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2019-11-13T19:58:35Z"
  labels:
    app: sso-oauth-authority
    env: prod
    maestro: "true"
    team: sso
  name: sso-oauth-authority
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sso-oauth-authority
      env: prod
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: app-prod-sso-oauth-authority
        prometheus.io/path: /oauth/metrics
        prometheus.io/port: "9000"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: sso-oauth-authority
        env: prod
        maestro: "true"
        team: sso
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: sso-oauth-authority
                  env: prod
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 100
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: sso-oauth-authority
                  env: prod
              topologyKey: kubernetes.io/hostname
            weight: 10
      containers:
      - env:
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: CREATION_TIMESTAMP
          value: "1573675115440911000"
        - name: INSTANCE
          value: auth.sharecare.com.br
        - name: REGION
          value: BR
        - name: MAESTRO_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: MAESTRO_CREATION_TIMESTAMP
          value: "1573675115440911000"
        - name: MAESTRO_INSTANCE
          value: auth.sharecare.com.br
        - name: MAESTRO_HOSTS
          value: auth.sharecare.com.br
        - name: MAESTRO_REGION
          value: BR
        - name: MAESTRO_ALL_REGIONS
          value: BR
        image: nexus.admin.sharecare.com/sso-oauth-authority:4.47.0-538
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /oauth/healthcheck?livenessProbe
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 5
        name: sso-oauth-authority
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /oauth/healthcheck?readinessProbe
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          limits:
            memory: 1024m
          requests:
            cpu: "2"
            memory: 512m
        volumeMounts:
        - mountPath: /app/secrets
          name: app-secrets
          readOnly: true
      imagePullSecrets:
      - name: nexus
      volumes:
      - name: app-secrets
        secret:
          secretName: app-secrets
status: {}
